--- a/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
+++ b/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
@@ -10,9 +10,6 @@
 }
 
 
-.row {
-    width: 60vw;
-}
 
 .card {
     background-color: inherit !important;
@@ -40,4 +37,8 @@
 .response-content {
     font-family:sans-serif;
     font-weight:300;
+}
+
+.latest-posts {
+    padding-left: 50px;
 }
