forum explore user posts endpoint

--- a/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
@@ -36,7 +36,7 @@
                     <h5 class="card-title">
                       <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/046-stamp collecting.png') }}"/>
                     </h5>
-                    <p class="card-text">Go to Your posts.</p>
+                    <a href="{{ url_for('redactor_zone_forum_my_posts') }}"><p class="card-text">Go to Your posts.</p></a>
                   </div>
                 </div>
               </div>
