--- a/contentagregator/modules/cnn/templates/cnn.html
+++ b/contentagregator/modules/cnn/templates/cnn.html
@@ -15,11 +15,12 @@
 </div>
 <div class="row justify-content-center">
   <div class='col d-flex justify-content-center'>
-    <div class="newses cnn"></div>
+    <div data-url="/api/v1/en/cnn" class="newses cnn"></div>
   </div>
 </div>
 </div>
 {% endblock %}
 {% block scripts %} 
 <script src="{{ url_for('cnn.static', filename='scripts/cnn.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='scripts/getRequest.js') }}"></script>
 {% endblock %}
