--- a/contentagregator/modules/google/templates/google.html
+++ b/contentagregator/modules/google/templates/google.html
@@ -15,11 +15,12 @@
 </div>
 <div class="row justify-content-center">
   <div class='col d-flex justify-content-center'>
-    <div class="newses google"></div>
+    <div data-url="/api/v1/en/google" class="newses google"></div>
   </div>
 </div>
 </div>
 {% endblock %}
 {% block scripts %} 
 <script src="{{ url_for('google.static', filename='scripts/google.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='scripts/getRequest.js') }}"></script>
 {% endblock %}
