setup forum index translations

--- a/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
@@ -73,5 +73,6 @@
 <script type="text/javascript" src="{{ url_for('redactor_zone_forum.static', filename='scripts/forum.js') }}"></script>
 <script>
     var user_id = undefined;
+    var markPage = "create";
 </script>
 {% endblock %}
