--- a/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
@@ -28,14 +28,14 @@
     <div class="mb-3">
         <label for="post-content" class="form-label t-content">Content</label>
         {% if user_posts %}
-        <textarea name="post_content" class="form-control" id="post-content" rows="3" > {{ user_posts.post.content }}</textarea>
+        <textarea name="post_content" class="form-control" id="post-content" rows="3" value="{{ user_posts.post.content }}"> {{ user_posts.post.content }}</textarea>
         {% else %}
         <textarea name="post_content" class="form-control" id="post-content" rows="3"></textarea>
         {% endif %}
     </div>
     <div class="mb-3">
         <label for="post-attachments" class="form-label t-attach">Add attachments</label>
-        <input name="post_attachments[]" class="form-control" id="post-attachments" type="file" accept="image/*, application/*" multiple>
+        <input name="post_attachment" class="form-control" id="post-attachments" type="file" accept="image/*, application/*" multiple>
     </div>
     <div class="d-flex flex-column align-items-end">
         <div class="display-attachment-container">
@@ -44,11 +44,11 @@
             {% for attachment in attachments %}
                 {% if attachment.file_name[36:]|length > 24 %}
                 <div class="row justify-content-end">
-                    <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.id }}">{{ attachment.file_name[0:20] }}...  <i class="fas fa-times"></i></span>
+                    <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.attachment_id }}">{{ attachment.file_name[0:20] }}...  <i class="fas fa-times"></i></span>
                 </div>
                 {% else %}
                 <div class="row justify-content-end">
-                    <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.id }}">{{ attachment.file_name }}  <i class="fas fa-times"></i></span>
+                    <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.attachment_id }}">{{ attachment.file_name }}  <i class="fas fa-times"></i></span>
                 </div>
                 {% endif %}
             {% endfor %}
