avatars in app part 1, adding default avatars - post module

--- a/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
+++ b/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
@@ -42,3 +42,16 @@
 .latest-posts {
     padding-left: 50px;
 }
+
+.post-avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 12px;
+}
+
+.mod-time {
+    font-size: xx-small;
+}
