--- a/contentagregator/modules/redactor_zone_forum/templates/forum-post.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-post.html
@@ -11,16 +11,20 @@
         <div class="row justify-content-center">
             <div class="col-sm-4">
                 <div class="card border-danger mb-3">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h5>{{ user.username }}</h5>
-                        </div>
-                        <div class="card-text">
-                            <small class="text-muted">
-                                Last seen at: {{ user.last_seen }}
-                            </small>
+                    <div class='container-fluid'>
+                        <div class="card-body">
+                            <img id="add-avatar" class="post-avatar"/>
+                            <h5 class="card-title">
+                                {{ user.username }}
+                            </h5>
+                            <div class="card-text">
+                                <small class="mod-time">
+                                    Last seen at: {{ modification_time }}
+                                </small>
+                            </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
             <div class="col">
@@ -83,4 +87,8 @@
 {% endblock %}
 {% block scripts %}
 <script type="text/javascript" src="{{ url_for('redactor_zone_forum.static', filename='scripts/forum.js') }}"></script>
+<script>
+    var post_id = {{ post.post.post_id }}
+    var user_id = undefined;
+</script>
 {% endblock %}
