--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -119,7 +119,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-lg d-flex justify-content-center">
+        <div class="col-8 d-flex justify-content-center">
             <div class="title-container">
                 <div class="form-row align-items-center">
                         <b><label for="title">Type a title for an Article!</label></b>
@@ -135,7 +135,7 @@
 
     <div class="article-text-container">
         <div class="row justify-content-center">
-            <div class="col d-flex jusify-content-center">
+            <div class="col-8 d-flex jusify-content-center">
                 <div class="form-group col-md-12">
                     <b><label for="trumbowyg">Type an Article!</label></b>
                     {% if user_article %}
