--- a/contentagregator/modules/auth/templates/register.html
+++ b/contentagregator/modules/auth/templates/register.html
@@ -7,8 +7,11 @@
     <div class="col d-flex justify-content-center">
         <form method="POST">
             <div class="form-group">
-                {{ render_field(form.name, class="form-control") }}
+                {{ render_field(form.first_name, class="form-control") }}
             </div>
+            <div class="form-group">
+              {{ render_field(form.last_name, class="form-control") }}
+          </div>
             <div class="form-group">
               {{ render_field(form.username, class="form-control") }}
             </div>
