--- a/contentagregator/modules/auth/templates/user.html
+++ b/contentagregator/modules/auth/templates/user.html
@@ -18,7 +18,7 @@
             <form>
                 <div class="form-group">
                   <label for="fullname">Fullname</label>
-                  <input type="text" class="form-control" id="fullname" value="{{ user.first_name }} {{ user.last_name }}">
+                  <input type="text" class="form-control" id="fullname" value="{{ user.first_name if user.first_name else ''}} {{ user.last_name if user.last_name else ''}}">
                 </div>
                 <div class="form-group">
                   <label for="username">Username</label>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail</label>  
-                    <input type="email" class="form-control" id="email" value="{{ user.email }}">
+                    <input type="email" class="form-control" id="email" value="{{ user.email if user.email else '' }}">
                 </div>
                 <button
                     data-url="/user/{{ user.username }}/{{ user.id }}/update"
