--- a/contentagregator/modules/bbc/templates/bbc.html
+++ b/contentagregator/modules/bbc/templates/bbc.html
@@ -21,4 +21,6 @@
 {% endblock %}
 {% block scripts %} 
 <script src="{{ url_for('bbc.static', filename='scripts/bbc.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='scripts/getRequest.js') }}"></script>
+
 {% endblock %}
