--- a/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
@@ -57,6 +57,7 @@
 <script>
   var user_id = undefined;
   var markPage = "index";
-</script
+  var post_id;
+</script>
 <script type="text/javascript" src="{{ url_for('redactor_zone_forum.static', filename='scripts/forum.js') }}"></script>
 {% endblock %}
