styling forum-index template / red borders

--- a/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
+++ b/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
@@ -55,3 +55,9 @@
 .mod-time {
     font-size: xx-small;
 }
+
+.straight-border {
+    margin: 50px auto;
+    width: 60%;
+    border-top: 1px solid red;
+}
