--- a/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
@@ -9,8 +9,8 @@
       <img class="forum-main-img" src="{{ url_for('static', filename='img/idea.jpg') }}" class="img-fluid">
     
     <div class="row justify-content-center">
-        <div class="d-flex justify-content-center">
-            <div class="card mb-3">
+        <div class="d-flex justify-content-center" style="margin-top: 50px;">
+            <div class="card mb-3" style="border: 1px solid red;">
                 <div class="container-fluid">
                   <div class="card-body text-light">
                     <h5 class="card-title">
@@ -20,7 +20,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3">
+              <div class="card mb-3" style="border: 1px solid red;">
                 <div class="container-fluid">
                   <div class="card-body text-light">
                     <h5 class="card-title">
@@ -30,7 +30,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3">
+              <div class="card mb-3" style="border: 1px solid red;">
                 <div class="container-fluid">
                   <div class="card-body text-light">
                     <h5 class="card-title">
@@ -42,9 +42,9 @@
               </div>
         </div>
     </div>
-    
+    <div class="straight-border"></div>
     <div class="row justify-content-center" style="margin-top: 30px;">
-        <div class="col d-flex justify-content-start">
+        <div class="col d-flex justify-content-center">
             <h2 class="latest-posts"><span style="color: red;">LATEST</span>POSTS</h2>
         </div>
     </div>
