--- a/contentagregator/modules/auth/templates/login.html
+++ b/contentagregator/modules/auth/templates/login.html
@@ -2,7 +2,11 @@
 {% from "form_helpers.html" import render_field %}
 
 {% block app %}
-
+<div class="row justify-content-end">
+  <div class="col d-flex justify-content-end">
+    <a href="{{ url_for('google_auth') }}" class="btn btn-light float-left">Login with google</a>
+  </div>
+</div>
 <div class="row justify-content-center">
     <div class="col d-flex justify-content-center">
         <form method="POST">
