--- a/contentagregator/modules/auth/templates/register.html
+++ b/contentagregator/modules/auth/templates/register.html
@@ -4,9 +4,9 @@
 {% block app %}
 
 <div class="row justify-content-center">
-    <div class="col d-flex justify-content-center">
+    <div class=" d-flex justify-content-center">
         <form method="POST">
-            <div class="form-group">
+            <div class="form-group ">
                 {{ render_field(form.first_name, class="form-control") }}
             </div>
             <div class="form-group">
