--- a/contentagregator/modules/bbc/templates/bbc.html
+++ b/contentagregator/modules/bbc/templates/bbc.html
@@ -15,7 +15,7 @@
 </div>
 <div class="row justify-content-center">
   <div class='col d-flex justify-content-center'>
-    <div data-id="/api/v1/en/bbc" class="newses bbc"></div>
+    <div data-url="/api/v1/en/bbc" class="newses bbc"></div>
   </div>
 </div>
 {% endblock %}
